Fixed to navbar collapse

--- a/svc/public/resource/style/main.css
+++ b/svc/public/resource/style/main.css
@@ -100,8 +100,8 @@ label {
       margin-right: 5px; }
 
 div.error {
-  border-top: 1px solid darkred;
-  color: darkred;
+  border-top: 1px solid #d9534f;
+  color: #d9534f;
   font-size: 10pt;
   font-weight: bold; }
 
