--- a/svc/public/resource/style/variables.scss
+++ b/svc/public/resource/style/variables.scss
@@ -3,5 +3,5 @@ $brand-darker: #01507a;
 $brand-darkest: #013855;
 $link-color-ondark: #a2b4c3;
 
-$error: darkred;
+$error: #d9534f;
 $logo-color: rgb(0, 61, 104);
